--- a/blood_spectroscopy.ipynb
+++ b/blood_spectroscopy.ipynb
@@ -21,6 +21,10 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
+    "from sklearn.multioutput import MultiOutputClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report\n",
     "\n",
     "\n",
     "# To ignore all warnings\n",
@@ -1643,8 +1647,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "KL divergence is a measure of how much two distributions are different from one another.\n",
+    "\n",
+    "Perplexity is simply the number of effective neighbors for each point"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1666,7 @@
        "0.5627299547195435"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1681,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -29141,7 +29154,7 @@
          }
         },
         "title": {
-         "text": "t-SNE visualization of Customer Churn dataset"
+         "text": "t-SNE visualization of Blood spectroscopy dataset"
         },
         "xaxis": {
          "anchor": "y",
@@ -29180,7 +29193,7 @@
     "# Creating the scatter plot\n",
     "fig = px.scatter(x=X_tsne[:, 0], y=X_tsne[:, 1], color=y_combined)\n",
     "fig.update_layout(\n",
-    "    title=\"t-SNE visualization of Customer Churn dataset\",\n",
+    "    title=\"t-SNE visualization of Blood spectroscopy dataset\",\n",
     "    xaxis_title=\"First t-SNE\",\n",
     "    yaxis_title=\"Second t-SNE\",\n",
     ")\n",
