--- a/blood_spectroscopy.ipynb
+++ b/blood_spectroscopy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,18 +47,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loading datasets\n",
+    "# Loading the train datasets\n",
     "train = pd.read_csv(r'C:\\Users\\User\\Desktop\\Blood-Spectroscopy-Classification\\train data\\Train.csv')\n",
-    "train_trimmed = pd.read_csv(r'C:\\Users\\User\\Desktop\\Blood-Spectroscopy-Classification\\train data\\Train_trimmed.csv')"
+    "train_trimmed = pd.read_csv(r'C:\\Users\\User\\Desktop\\Blood-Spectroscopy-Classification\\train data\\Train_trimmed.csv')\n",
+    "\n",
+    "# Loading the train datasets\n",
+    "test = pd.read_csv(r\"C:\\Users\\User\\Desktop\\Blood-Spectroscopy-Classification\\test data\\Test.csv\")\n",
+    "test_trimmed = pd.read_csv(r\"C:\\Users\\User\\Desktop\\Blood-Spectroscopy-Classification\\test data\\Test_trimmed.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +274,7 @@
        "[5 rows x 176 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +498,7 @@
        "[5 rows x 154 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +510,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Reading_ID</th>\n",
+       "      <th>absorbance0</th>\n",
+       "      <th>absorbance1</th>\n",
+       "      <th>absorbance2</th>\n",
+       "      <th>absorbance3</th>\n",
+       "      <th>absorbance4</th>\n",
+       "      <th>absorbance5</th>\n",
+       "      <th>absorbance6</th>\n",
+       "      <th>absorbance7</th>\n",
+       "      <th>absorbance8</th>\n",
+       "      <th>...</th>\n",
+       "      <th>absorbance162</th>\n",
+       "      <th>absorbance163</th>\n",
+       "      <th>absorbance164</th>\n",
+       "      <th>absorbance165</th>\n",
+       "      <th>absorbance166</th>\n",
+       "      <th>absorbance167</th>\n",
+       "      <th>absorbance168</th>\n",
+       "      <th>absorbance169</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>humidity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ID_37BEI22R</td>\n",
+       "      <td>0.449736</td>\n",
+       "      <td>0.449798</td>\n",
+       "      <td>0.447488</td>\n",
+       "      <td>0.464694</td>\n",
+       "      <td>0.466377</td>\n",
+       "      <td>0.485350</td>\n",
+       "      <td>0.488915</td>\n",
+       "      <td>0.495073</td>\n",
+       "      <td>0.504129</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.223793</td>\n",
+       "      <td>1.195193</td>\n",
+       "      <td>1.205222</td>\n",
+       "      <td>1.164610</td>\n",
+       "      <td>1.151594</td>\n",
+       "      <td>1.166565</td>\n",
+       "      <td>1.157079</td>\n",
+       "      <td>1.200857</td>\n",
+       "      <td>40.88</td>\n",
+       "      <td>25.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ID_4W85V5DV</td>\n",
+       "      <td>0.495429</td>\n",
+       "      <td>0.505488</td>\n",
+       "      <td>0.510239</td>\n",
+       "      <td>0.518880</td>\n",
+       "      <td>0.533147</td>\n",
+       "      <td>0.543142</td>\n",
+       "      <td>0.551670</td>\n",
+       "      <td>0.558261</td>\n",
+       "      <td>0.564027</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.310219</td>\n",
+       "      <td>1.294600</td>\n",
+       "      <td>1.269705</td>\n",
+       "      <td>1.244257</td>\n",
+       "      <td>1.238365</td>\n",
+       "      <td>1.218063</td>\n",
+       "      <td>1.252711</td>\n",
+       "      <td>1.255433</td>\n",
+       "      <td>42.35</td>\n",
+       "      <td>30.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ID_L4YR3NDY</td>\n",
+       "      <td>0.437904</td>\n",
+       "      <td>0.439064</td>\n",
+       "      <td>0.442527</td>\n",
+       "      <td>0.450437</td>\n",
+       "      <td>0.455363</td>\n",
+       "      <td>0.465817</td>\n",
+       "      <td>0.471249</td>\n",
+       "      <td>0.479145</td>\n",
+       "      <td>0.482595</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.162556</td>\n",
+       "      <td>1.161711</td>\n",
+       "      <td>1.160406</td>\n",
+       "      <td>1.159570</td>\n",
+       "      <td>1.159641</td>\n",
+       "      <td>1.157491</td>\n",
+       "      <td>1.177478</td>\n",
+       "      <td>1.169607</td>\n",
+       "      <td>42.83</td>\n",
+       "      <td>25.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ID_U88E3SQ6</td>\n",
+       "      <td>0.495038</td>\n",
+       "      <td>0.506246</td>\n",
+       "      <td>0.508730</td>\n",
+       "      <td>0.518995</td>\n",
+       "      <td>0.529961</td>\n",
+       "      <td>0.537583</td>\n",
+       "      <td>0.539696</td>\n",
+       "      <td>0.540400</td>\n",
+       "      <td>0.547279</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.168321</td>\n",
+       "      <td>1.137272</td>\n",
+       "      <td>1.109380</td>\n",
+       "      <td>1.047561</td>\n",
+       "      <td>1.050649</td>\n",
+       "      <td>1.020026</td>\n",
+       "      <td>1.033139</td>\n",
+       "      <td>1.023882</td>\n",
+       "      <td>40.95</td>\n",
+       "      <td>41.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ID_NW7Z3XU7</td>\n",
+       "      <td>0.531306</td>\n",
+       "      <td>0.525309</td>\n",
+       "      <td>0.535306</td>\n",
+       "      <td>0.541387</td>\n",
+       "      <td>0.551364</td>\n",
+       "      <td>0.559821</td>\n",
+       "      <td>0.564851</td>\n",
+       "      <td>0.570824</td>\n",
+       "      <td>0.577426</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.288590</td>\n",
+       "      <td>1.287614</td>\n",
+       "      <td>1.300164</td>\n",
+       "      <td>1.285028</td>\n",
+       "      <td>1.272818</td>\n",
+       "      <td>1.277348</td>\n",
+       "      <td>1.248892</td>\n",
+       "      <td>1.290145</td>\n",
+       "      <td>46.99</td>\n",
+       "      <td>24.21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 173 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Reading_ID  absorbance0  absorbance1  absorbance2  absorbance3  \\\n",
+       "0  ID_37BEI22R     0.449736     0.449798     0.447488     0.464694   \n",
+       "1  ID_4W85V5DV     0.495429     0.505488     0.510239     0.518880   \n",
+       "2  ID_L4YR3NDY     0.437904     0.439064     0.442527     0.450437   \n",
+       "3  ID_U88E3SQ6     0.495038     0.506246     0.508730     0.518995   \n",
+       "4  ID_NW7Z3XU7     0.531306     0.525309     0.535306     0.541387   \n",
+       "\n",
+       "   absorbance4  absorbance5  absorbance6  absorbance7  absorbance8  ...  \\\n",
+       "0     0.466377     0.485350     0.488915     0.495073     0.504129  ...   \n",
+       "1     0.533147     0.543142     0.551670     0.558261     0.564027  ...   \n",
+       "2     0.455363     0.465817     0.471249     0.479145     0.482595  ...   \n",
+       "3     0.529961     0.537583     0.539696     0.540400     0.547279  ...   \n",
+       "4     0.551364     0.559821     0.564851     0.570824     0.577426  ...   \n",
+       "\n",
+       "   absorbance162  absorbance163  absorbance164  absorbance165  absorbance166  \\\n",
+       "0       1.223793       1.195193       1.205222       1.164610       1.151594   \n",
+       "1       1.310219       1.294600       1.269705       1.244257       1.238365   \n",
+       "2       1.162556       1.161711       1.160406       1.159570       1.159641   \n",
+       "3       1.168321       1.137272       1.109380       1.047561       1.050649   \n",
+       "4       1.288590       1.287614       1.300164       1.285028       1.272818   \n",
+       "\n",
+       "   absorbance167  absorbance168  absorbance169  temperature  humidity  \n",
+       "0       1.166565       1.157079       1.200857        40.88     25.70  \n",
+       "1       1.218063       1.252711       1.255433        42.35     30.16  \n",
+       "2       1.157491       1.177478       1.169607        42.83     25.51  \n",
+       "3       1.020026       1.033139       1.023882        40.95     41.32  \n",
+       "4       1.277348       1.248892       1.290145        46.99     24.21  \n",
+       "\n",
+       "[5 rows x 173 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Previewing the train dataset\n",
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Previewing the trimmed test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -514,18 +744,23 @@
      "output_type": "stream",
      "text": [
       "Train shape is (13140, 176) \n",
+      "Train trimmed shape is (13140, 154)\n",
+      "Train shape is (13140, 176) \n",
       "Train trimmed shape is (13140, 154)\n"
      ]
     }
    ],
    "source": [
-    "# Checking the shape of the datasets\n",
+    "# Checking the shape of the training datasets\n",
+    "print(f'Train shape is {train.shape} \\nTrain trimmed shape is {train_trimmed.shape}')\n",
+    "\n",
+    "# Checking the shape of the testing datasets\n",
     "print(f'Train shape is {train.shape} \\nTrain trimmed shape is {train_trimmed.shape}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +776,7 @@
        "      dtype='object', length=176)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -569,6 +804,16 @@
       "Trimmed train data types\n",
       "float64    150\n",
       "object       4\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Test data types:\n",
+      "float64    172\n",
+      "object       1\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      " Trimmed test data types:\n",
+      "float64    150\n",
+      "object       1\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -576,8 +821,195 @@
    "source": [
     "# Checking the data types in the train dataset\n",
     "print('Train data types\\n{}\\n\\n'.format(train.dtypes.value_counts()))\n",
+    "\n",
     "# Checking the data types in the trimmed train dataset\n",
-    "print('Trimmed train data types\\n{}'.format(train_trimmed.dtypes.value_counts()))"
+    "print('Trimmed train data types\\n{}'.format(train_trimmed.dtypes.value_counts()))\n",
+    "\n",
+    "# Checking the data types in the the test dataset\n",
+    "print(f'\\nTest data types:\\n{test.dtypes.value_counts()}')\n",
+    "print(f'\\nTrimmed test data types:\\n{test_trimmed.dtypes.value_counts()}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Previewing the object columns\n",
+    "train_object_columns = train.select_dtypes(include='object')\n",
+    "test_object_columns = test.select_dtypes(include='object')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Reading_ID</th>\n",
+       "      <th>hdl_cholesterol_human</th>\n",
+       "      <th>hemoglobin(hgb)_human</th>\n",
+       "      <th>cholesterol_ldl_human</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ID_3SSHI56C</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ID_599OOLZA</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>high</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ID_MVJGPQ75</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ID_CK6RF8YV</td>\n",
+       "      <td>low</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ID_82N6QE6I</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Reading_ID hdl_cholesterol_human hemoglobin(hgb)_human  \\\n",
+       "0  ID_3SSHI56C                    ok                    ok   \n",
+       "1  ID_599OOLZA                    ok                  high   \n",
+       "2  ID_MVJGPQ75                    ok                    ok   \n",
+       "3  ID_CK6RF8YV                   low                    ok   \n",
+       "4  ID_82N6QE6I                    ok                    ok   \n",
+       "\n",
+       "  cholesterol_ldl_human  \n",
+       "0                    ok  \n",
+       "1                  high  \n",
+       "2                  high  \n",
+       "3                  high  \n",
+       "4                  high  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Previewing the object columns in the train dataset\n",
+    "train_object_columns.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Reading_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ID_37BEI22R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ID_4W85V5DV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ID_L4YR3NDY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ID_U88E3SQ6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ID_NW7Z3XU7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Reading_ID\n",
+       "0  ID_37BEI22R\n",
+       "1  ID_4W85V5DV\n",
+       "2  ID_L4YR3NDY\n",
+       "3  ID_U88E3SQ6\n",
+       "4  ID_NW7Z3XU7"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Previewing the object columns in the test dataset\n",
+    "test_object_columns.head()"
    ]
   },
   {
@@ -591,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
