--- a/blood_spectroscopy.ipynb
+++ b/blood_spectroscopy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "[5 rows x 176 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
        "[5 rows x 154 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "[5 rows x 173 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
        "      dtype='object', length=176)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
       "object       1\n",
       "Name: count, dtype: int64\n",
       "\n",
-      " Trimmed test data types:\n",
+      "Trimmed test data types:\n",
       "float64    150\n",
       "object       1\n",
       "Name: count, dtype: int64\n"
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
        "4                  high  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
        "4  ID_NW7Z3XU7"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2050,6 +2050,7 @@
     "'''\n",
     "# Importing tsne\n",
     "from sklearn.manifold import TSNE\n",
+    "\n",
     "#Importingg plotly for visualization\n",
     "import plotly.express as px\n",
     "\n",
@@ -2089,7 +2090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2098,7 +2099,7 @@
        "0.5627299547195435"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2114,9 +2115,11 @@
     "\n",
     "# Instantiating tsne class\n",
     "tsne = TSNE(n_components=2,perplexity=30, random_state=SEED)\n",
-    "#fitting tsne class to the data\n",
+    "\n",
+    "# fitting tsne class to the data\n",
     "X_tsne = tsne.fit_transform(X)\n",
-    "# Measuring how the ne dimentions captures the original data\n",
+    "\n",
+    "# Measuring how the tsne dimensions captures the original data\n",
     "\n",
     "'''\n",
     "Low KL divergence is a sign of better results.\n",
@@ -2126,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -29631,6 +29634,174 @@
     ")\n",
     "fig.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "* Points in the plot that have similar colors are closer together which indicate that similar conditions or patterns exist among those data points.\n",
+    "\n",
+    "* The overlaps between different colors suggests that there might be potential areas where patients are on the borderline between different health states.\n",
+    "\n",
+    "\n",
+    "## Feature engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing label encoding library\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Label encoding the target variables\n",
+    "targets = [[\"hdl_cholesterol_human\",'hemoglobin(hgb)_human','cholesterol_ldl_human']]\n",
+    "\n",
+    "# Function to label encode\n",
+    "def encoding(df):\n",
+    "    # Initializing label encoder\n",
+    "    le = LabelEncoder()\n",
+    "\n",
+    "    # Applying label encoder to the target variable\n",
+    "    df[\"hdl_cholesterol_human\"] = le.fit_transform(df[\"hdl_cholesterol_human\"])\n",
+    "    df[\"hemoglobin(hgb)_human\"] = le.fit_transform(df[\"hemoglobin(hgb)_human\"])\n",
+    "    df['cholesterol_ldl_human'] = le.fit_transform(df[\"cholesterol_ldl_human\"])\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "# Applying the function to the data\n",
+    "train_encoded = encoding(train)\n",
+    "train_trimmed_encoded = encoding(train_trimmed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting the train data into training and local testing\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Data splitting function\n",
+    "def split(df):\n",
+    "    # Defining the independent variable\n",
+    "    X = df.drop(columns=[\"hdl_cholesterol_human\",'hemoglobin(hgb)_human','cholesterol_ldl_human',\"Reading_ID\"])\n",
+    "    \n",
+    "    # Defining the dependent variable\n",
+    "    y = df[[\"hdl_cholesterol_human\",'hemoglobin(hgb)_human','cholesterol_ldl_human']]\n",
+    "\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
+    "\n",
+    "    return X_train, X_test, y_train, y_test\n",
+    "\n",
+    "# Splitting the train encoded df\n",
+    "X_train, X_test, y_train, y_test = split(train_encoded)\n",
+    "\n",
+    "# Splitting the train trimmed df\n",
+    "X_train_trimmed, X_test_trimmed, y_train_trimmed, y_test_trimmed = split(train_trimmed_encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "# Function for Scaling, feature reduction and whitening data on the data that is not trimmed\n",
+    "def preprocess_data(X_train, X_test,test, n_components=None):\n",
+    "\n",
+    "    # Creating the pipeline\n",
+    "    pipeline = Pipeline([('scaler', StandardScaler()),  \n",
+    "        ('pca', PCA(n_components=n_components, whiten=True))])\n",
+    "\n",
+    "    # Fitting and transforming the X_train data\n",
+    "    X_train_transformed = pipeline.fit_transform(X_train)\n",
+    "\n",
+    "    # Transforming the X_test data\n",
+    "    X_test_transformed = pipeline.transform(X_test)\n",
+    "\n",
+    "    # Transforming the test dataset\n",
+    "    test_transformed = pipeline.transform(test.drop(columns=[\"Reading_ID\"]))\n",
+    "\n",
+    "    return X_train_transformed,X_test_transformed,test_transformed\n",
+    "\n",
+    "\n",
+    "# Function for Scaling, feature reduction and whitening data on the trimmed data\n",
+    "def preprocess_data(X_train_trimmed, X_test_trimmed,test_trimmed, n_components=None):\n",
+    "\n",
+    "    # Creating the pipeline\n",
+    "    pipeline = Pipeline([('scaler', StandardScaler()),  \n",
+    "        ('pca', PCA(n_components=n_components, whiten=True))])\n",
+    "\n",
+    "    # Fitting and transforming the X_train trimmed data\n",
+    "    X_train_trimmed_transformed = pipeline.fit_transform(X_train_trimmed)\n",
+    "\n",
+    "    # Transforming the X_test trimmed data\n",
+    "    X_test_trimmed_transformed = pipeline.fit_transform(X_test_trimmed)\n",
+    "\n",
+    "    # Transforming the test_trimmed dataset\n",
+    "    test_trimmed_transformed = pipeline.transform(test_trimmed.drop(columns=[\"Reading_ID\"]))\n",
+    "\n",
+    "    return X_train_trimmed_transformed,X_test_trimmed_transformed,test_trimmed_transformed\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train_whitened shape: (9855, 5)\n",
+      "X_test_whitened shape: (3285, 5)\n",
+      "test_whitened shape: (3660, 5)\n",
+      "X_train_trimmed_whitened shape: (9855, 5)\n",
+      "X_test_trimmed_whitened shape: (3285, 5)\n",
+      "test_trimmed_whitened shape: (3660, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Applying the functions on the data\n",
+    "X_train_whitened,X_test_whitened,test_whitened = preprocess_data(X_train, X_test,test, n_components=5)\n",
+    "X_train_trimmed_whitened,X_test_trimmed_whitened,test_trimmed_whitened = preprocess_data(X_train_trimmed,\n",
+    "                                                                                        X_test_trimmed,test_trimmed,\n",
+    "                                                                                        n_components=5)\n",
+    "\n",
+    "# Checking the shape of the data\n",
+    "print(\"X_train_whitened shape:\", X_train_whitened.shape)\n",
+    "print(\"X_test_whitened shape:\", X_test_whitened.shape)\n",
+    "print(\"test_whitened shape:\", test_whitened.shape)\n",
+    "\n",
+    "print(\"X_train_trimmed_whitened shape:\", X_train_trimmed_whitened.shape)\n",
+    "print(\"X_test_trimmed_whitened shape:\", X_test_trimmed_whitened.shape)\n",
+    "print(\"test_trimmed_whitened shape:\", test_trimmed_whitened.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modelling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
